# Federated-AI-Sentinel-Early-Detection-of-Hospital-Acquired-Infections

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  SECURITY_CHECKLIST.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
.github_workflows_backup/: python_ci.yml  ui_ci.yml
devcontainer/: Dockerfile  devcontainer.json
docs/: architecture.md  clinical_protocol.md  index.md  threat_model.md
src/: __init__.py
src/drift/: __init__.py  detectors.py  retrain_trigger.py
src/explainability/: __init__.py  counterfactuals.py  shap_explainer.py
src/features/: __init__.py  labeling.py  windowing.py
src/features/feast_repo/: .feastignore  feature_store.yaml
src/federated/: __init__.py  client_node.py  dp_utils.py  secure_aggregation.py  server_aggregator.py  simulate_three_sites.py
src/ingestion/: __init__.py  kafka_consumer.py  kafka_producer.py
src/modeling/: __init__.py
src/modeling/baselines/: __init__.py  xgb_baseline.py
src/modeling/safety/: __init__.py  fairness_metrics.py  robustness_tests.py
src/modeling/temporal/: __init__.py  calibrate.py  evaluate.py  train.py  transformer_model.py  uncertainty.py
src/monitoring/: prometheus.yml
src/monitoring/grafana/dashboards/: sentinel_overview.json
src/serving/: __init__.py
src/serving/api/: __init__.py  main.py
src/serving/api/routers/: explain.py  health.py  score.py
src/serving/runtime/: __init__.py  ensemble.py  predictor.py
src/ui/clinician_app/: index.html  package.json  tailwind.config.js
src/ui/clinician_app/src/: App.tsx
src/ui/clinician_app/src/components/: ExplanationPanel.tsx  Heatmap.tsx  RiskCard.tsx  TrendChart.tsx
src/ui/clinician_app/src/pages/: Dashboard.tsx  PatientView.tsx
src/ui/clinician_app/src/styles/: index.css
tests/e2e/: __init__.py  test_end_to_end_training.py
tests/unit/: test_api.py  test_drift.py  test_transformer.py  test_windowing.py
tools/: __init__.py  autopush.py
